fixed issue on displaying title, year, and description

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
     </header>
 
     <main>
-        <select name="titles" id="titles"></select>
-        <section id="display-info"></section>
+        <select id="titles"></select>
+        <section id="display-info">
+            <div id="content">
+
+            </div>
+        </section>
         <form>
             <label for="text-review">Your Review</label>
             <input type="text" id="text-review" name="text-review" />
