added review list

--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
 
     <main>
         <select id="titles"></select>
-        <section id="display-info">
-            <div id="content">
-
-            </div>
-        </section>
+        <section id="display-info"></section>
         <form>
             <label for="text-review">Your Review</label>
             <input type="text" id="text-review" name="text-review" />
